objects/ALTF__Contact_Map_Details__c.object
<CustomObject>
    <fields>
        <fullName>ALTF__Account_Relationship_Last_Modified__c</fullName>
        <label>Account Relationship Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ALTF__Account_Relationship__c</fullName>
        <label>Account Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                    <label>No</label>
                </value>
                <value>
                    <fullName>External</fullName>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Altify Contact Details</relationshipLabel>
        <relationshipName>Altify_Contact_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Buyer_Role_Answer__c</fullName>
        <label>Buyer Role Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Buyer_Role_Last_Modified__c</fullName>
        <label>Buyer Role Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ALTF__Buyer_Role__c</fullName>
        <label>Buyer Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Decision Maker and Approver</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Approver</fullName>
                </value>
                <value>
                    <fullName>Evaluator</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Color__c</fullName>
        <formula>IF(ISPICKVAL(ALTF__Status__c, &quot;Mentor&quot;), &quot;green&quot;,
IF(ISPICKVAL(ALTF__Status__c, &quot;Supporter&quot;), &quot;half_green&quot;,
IF(ISPICKVAL(ALTF__Status__c, &quot;Neutral&quot;), &quot;yellow&quot;,
IF(ISPICKVAL(ALTF__Status__c, &quot;Non-Supporter&quot;), &quot;half_red&quot;,
IF(ISPICKVAL(ALTF__Status__c, &quot;Enemy&quot;), &quot;red&quot;,
&quot;grey&quot;
)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__ConcatenatedFields__c</fullName>
        <formula>ALTF__Account__c &amp; IF(ISBLANK(ALTF__Opportunity__c), &apos;NULL&apos;, CASESAFEID(ALTF__Opportunity__c)) &amp; CASESAFEID(ALTF__Contact__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ConcatenatedFields</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Altify Contact Details</relationshipLabel>
        <relationshipName>Altify_Contact_Details</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ALTF__Coverage_Answer__c</fullName>
        <label>Coverage Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Coverage_Last_Modified__c</fullName>
        <label>Coverage Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ALTF__Coverage__c</fullName>
        <label>Coverage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-depth</fullName>
                </value>
                <value>
                    <fullName>Multiple contacts</fullName>
                </value>
                <value>
                    <fullName>Brief contact</fullName>
                </value>
                <value>
                    <fullName>No Contact</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Decision_Orientation_Last_Modified__c</fullName>
        <label>Decision Orientation Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ALTF__Decision_Orientation__c</fullName>
        <label>Decision Orientation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DEPRECATED Division</label>
        <referenceTo>ALTF__Account_Division__c</referenceTo>
        <relationshipLabel>Altify Contact Details</relationshipLabel>
        <relationshipName>Altify_Contact_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Is_Favourite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Favourite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Is_Key_Player__c</fullName>
        <formula>IF((ISPICKVAL(ALTF__Political__c, &quot;Political Structure&quot;) || ISPICKVAL(ALTF__Political__c, &quot;Inner Circle&quot;)) , true,
false 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Key Player</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Note__c</fullName>
        <label>Note</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__Opportunity__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Altify Contact Details</relationshipLabel>
        <relationshipName>Altify_Contact_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Political_Answer__c</fullName>
        <label>Political Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Political_Last_Modified__c</fullName>
        <label>Political Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ALTF__Political__c</fullName>
        <label>Political Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inner Circle</fullName>
                </value>
                <value>
                    <fullName>Political Structure</fullName>
                </value>
                <value>
                    <fullName>Outside Political Structure</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Sibling_Sort_Order__c</fullName>
        <label>Sibling Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Squares__c</fullName>
        <formula>MIN(6,
(CASE(ALTF__Status__c,
&quot;Mentor&quot;, 2,
&quot;Enemy&quot;, 2,
&quot;Supporter&quot;, 1,
&quot;Non-Supporter&quot;, 1,
&quot;Neutral&quot;, 0,
&quot;Unknown&quot;, 0,
0))
+
(CASE(ALTF__Political__c,
&quot;Inner Circle&quot;, 2,
&quot;Political Structure&quot;, 1,
&quot;Unknown&quot;, 0,
&quot;Outside Political Structure&quot;, 0,
0))
+
(CASE(ALTF__Buyer_Role__c,
&quot;decision maker&quot;, 2,
&quot;approver&quot;, 2,
&quot;evaluator&quot;, 1,
&quot;user&quot;, 0,
&quot;other&quot;, 0,
0))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Squares</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Status_Answer__c</fullName>
        <label>Status Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Status_Last_Modified__c</fullName>
        <label>Status Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ALTF__Status__c</fullName>
        <label>Support</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mentor</fullName>
                    <label>Champion</label>
                </value>
                <value>
                    <fullName>Supporter</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Non-Supporter</fullName>
                </value>
                <value>
                    <fullName>Enemy</fullName>
                    <label>Blocker</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Altify_Contact_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Altify Contact Map Details</label>
    <nameField>
        <label>Altify Contact Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Contact Map Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>